--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,18 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
- 
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+
     <title>React App</title>
+
+    <style>
+      body {font-family: "Times New Roman", Georgia, Serif;}
+      h1, h2, h3, h4, h5, h6 {
+        font-family: "Playfair Display";
+        letter-spacing: 5px;
+      }
+      </style>
   </head>
   <body>
     
